dum dum fuckiing dumb

--- a/midnight/Midnight.theme.css
+++ b/midnight/Midnight.theme.css
@@ -3,7 +3,7 @@
  * @author Tropical#8908
  * @version Auto
  * @description A dark, flat and modern user interface for DiscordApp. Maintained by Fx Danny (288290878169284619).
- * @source https://raw.githubusercontent.com/Danny9182/BetterDiscordStuff/master/midnight/css/base.css
+ * @source https://danny9182.github.io/BetterDiscordStuff/midnight/css/base.css
  * @website https://tropix126.github.io/BetterDiscordStuff/midnight/
  * @invite TeRQEPb 
  * @authorId 254362351170617345
