--- a/midnight/Midnight_x_Casual_Saturdays.theme.css
+++ b/midnight/Midnight_x_Casual_Saturdays.theme.css
@@ -8465,12 +8465,12 @@ html.theme-light body.bd-minimal #app-mount::before {
 }
 
 .colorDanger-2qLCe1 .label-22pbtT,
-.item-1GzJrl.leave-1DRJfn {
+.item-1tOPte.colorDanger-2qLCe1 {
     color:var(--danger);
 }
 
 .itemBase-tz5SeC.danger-2dXSTE:hover,
-.item-1GzJrl.leave-1DRJfn:hover {
+.item-1tOPte.colorDanger-2qLCe1:hover {
     border-color:var(--danger) !important;
     box-shadow: inset 15px 0 15px -15px var(--danger) !important;
 }
