--- a/midnight/css/base.css
+++ b/midnight/css/base.css
@@ -3080,6 +3080,29 @@ border-bottom: 2px solid var(--hover);
 	cursor: default;
 }
 
+.avatar-1BDn8e[src*="288290878169284619"] + h2 .timestamp-3ZCmNB::before {
+    content: 'Theme Maintainer';
+    text-transform: uppercase;
+    font-size: 10px !important;
+    font-weight: 500;
+    padding: 2px 4px;
+    line-height: normal;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    border: 2px solid #47ccad;
+    border-radius: 1px;
+    background: rgba(26, 186, 149, 0.5);
+    text-shadow: none;
+    color: rgba(255, 255, 255, 0.95);
+    position: absolute;
+    right: 0px;
+    margin: 0 6px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: default;
+}
+
 .avatar-1BDn8e + h2::after,
 #app-mount .avatar-1BDn8e:hover + h2::after {
 	left:36px !important;
